src/objects/BR_Participation__c.object
<CustomObject>
    <fields>
        <fullName>AC_User_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Segment</label>
        <referenceTo>AC_User_Segment__c</referenceTo>
        <relationshipLabel>BR Participations</relationshipLabel>
        <relationshipName>BR_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADA_Accomodations__c</fullName>
        <label>Will you require ADA Accommodations?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Allergies__c</fullName>
        <label>Dietary Restrictions/Food Allergies?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BR_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BR Event</label>
        <referenceTo>BR_Event__c</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>BR_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bypass_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COMP_Code__c</fullName>
        <formula>IF( Fon_Sales_Order__c != null, If(NOT(ISBLANK(Fon_Sales_Order__r.OrderApi__Source_Code__r.Name)), Fon_Sales_Order__r.OrderApi__Source_Code__r.Name, Source_Code__r.Name) ,  Source_Code__r.Name )</formula>
        <label>COMP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Live! Events</relationshipLabel>
        <relationshipName>Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Email__c</fullName>
        <label>Emergency Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <label>Emergency Contact Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <formula>BR_Event__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exhibitor_ID__c</fullName>
        <formula>IF( Is_Booth_Staff__c ,  Contact__r.AccountId , null)</formula>
        <label>Exhibitor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Attendee_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Attendee Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fon_Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipName>AC_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Food_Preferences__c</fullName>
        <label>Food Preferences</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GDPR_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GDPR Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Safety_Attestation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Consent to follow the AACR&apos;s policy for health and safety requirements (wearing a mask, etc.) for in-person meetings.</description>
        <label>Health/Safety Attestation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Booth_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is exhibitor booth staff</description>
        <label>Is Booth Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joint_Member_ID__c</fullName>
        <label>Joint Member ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participate__c</fullName>
        <label>Participant Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                    <default>true</default>
                    <label>Incomplete</label>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Awaiting Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Post_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre/Post Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refund_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refund Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Source__c</fullName>
        <label>Registration Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LIVE</fullName>
                    <default>true</default>
                    <label>LIVE</label>
                </value>
                <value>
                    <fullName>CompuSystems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to source code</description>
        <label>Source Code</label>
        <referenceTo>OrderApi__Source_Code__c</referenceTo>
        <relationshipLabel>BR Participations</relationshipLabel>
        <relationshipName>BR_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BR_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vegetarian__c</fullName>
        <label>Vegetarian</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Via_Mass_Reg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Via Mass Reg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workshop_Groups__c</fullName>
        <label>Workshop Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Senior_Scientist</fullName>
                    <label>Senior Scientist</label>
                </value>
                <value>
                    <fullName>Trainee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BR Participation</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Participation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BR Participations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>